api-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-frontend
  template:
    metadata:
      labels:
        app: webapp-frontend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3000"
    spec:
      containers:
      - name:  webapp-frontend
        image: csazo2408/php-k8s-app
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-frontend
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: webapp-frontend
