api-products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-products
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-products
  template:
    metadata:
      labels:
        app: api-products
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3000"
    spec:
      containers:
      - name: api-products
        image: your-docker-image:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-products
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: api-products
