product-backend-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-product-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-products
      version: v2
  template:
    metadata:
      labels:
        app: api-products
        version: v2
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3000"
    spec:
      containers:
      - name: api-product-v2
        image: csazo2408/api-k8s-demo
---
apiVersion: v1
kind: Service
metadata:
  name: api-product-v2-reto
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: api-products
    version: v2
