virtual-service-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-products-r4
spec:
  host: api-products-r4
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-products-r4
spec:
  hosts:
    - api-products-r4
  http:
    - route:
        - destination:
            host: api-products-r4
            subset: v1
          weight: 80
        - destination:
            host: api-products-r4
            subset: v2
          weight: 20
