auth.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-webapp
spec:
  selector:
    matchLabels:
      app: api-products
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/default/sa/default"
